--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -132,6 +132,9 @@ ja:
       too_short: は%{count}文字以上で入力してください
       wrong_length: は%{count}文字で入力してください
       other_than: は%{count}以外の値にしてください
+      wrong_size: "のサイズは%{file_size}に設定してください"
+      size_too_small: "のサイズは小さすぎます(%{file_size}以上に設定してください)"
+      size_too_big: "のサイズは大きすぎます(%{file_size}以下に設定してください)"
     template:
       body: 次の項目を確認してください
       header:
